make weighting more reproucibl

--- a/vignettes/original/_weighting.Rmd
+++ b/vignettes/original/_weighting.Rmd
@@ -69,6 +69,27 @@ logistic_glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 })
 ```
 
+```{r glm_logistic-no-eval, eval = FALSE}
+logistic_glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
+  logistic_glm <- glm(
+    resp ~ trt + cov1 + cov2,
+    data = as.data.frame(example_matrix),
+    family = binomial,
+    weights = ifelse(example_matrix[, "ext"] == 1, w, 1)
+  )
+  glm_summary <- summary(logistic_glm)$coef
+  ci <- confint(logistic_glm)
+  data.frame(
+    fitter = "glm",
+    borrowing = w,
+    variable = c("(Intercept)", "trt", "cov1", "cov2"),
+    estimate = glm_summary[, "Estimate"],
+    lower = ci[, 1],
+    upper = ci[, 2]
+  )
+})
+```
+
 ### BayesPPD
 
 ```{r bayesppd_logistic, include = FALSE}
@@ -101,9 +122,79 @@ logistic_ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 })
 ```
 
+
+```{r bayesppd_logistic-no-eval, eval = FALSE}
+logistic_ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
+  logistic_ppd <- glm.fixed.a0(
+    data.type = "Bernoulli",
+    data.link = "Logistic",
+    y = example_matrix[example_matrix[, "ext"] == 0, ][, "resp"],
+    x = example_matrix[example_matrix[, "ext"] == 0, ][, c("trt", "cov1", "cov2")],
+    historical = list(list(
+      y0 = example_matrix[example_matrix[, "ext"] == 1, ][, "resp"],
+      x0 = example_matrix[example_matrix[, "ext"] == 1, ][, c("cov1", "cov2")],
+      a0 = w
+    )),
+    lower.limits = rep(-100, 5),
+    upper.limits = rep(100, 5),
+    slice.widths = rep(1, 5),
+    nMC = 10000,
+    nBI = 1000
+  )[[1]]
+  ci <- apply(logistic_ppd, 2, quantile, probs = c(0.025, 0.975))
+  data.frame(
+    fitter = "BayesPPD",
+    borrowing = w,
+    variable = c("(Intercept)", "trt", "cov1", "cov2"),
+    estimate = colMeans(logistic_ppd),
+    lower = ci[1, ],
+    upper = ci[2, ]
+  )
+})
+```
+
 ### psborrow2
 
 ```{r psb2_logistic, include = FALSE}
+logistic_psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
+  logistic_psb2 <- create_analysis_obj(
+    data_matrix = as.matrix(cbind(
+      example_matrix,
+      w = ifelse(example_matrix[, "ext"] == 1, w, 1)
+    )),
+    covariates = add_covariates(c("cov1", "cov2"),
+      priors = normal_prior(0, 100)
+    ),
+    borrowing = borrowing_details("Full borrowing",
+      ext_flag_col = "ext",
+    ),
+    treatment = treatment_details("trt", normal_prior(0, 100)),
+    outcome = outcome_bin_logistic("resp",
+      baseline_prior = normal_prior(0, 1000),
+      weight_var = "w"
+    )
+  )
+
+  mcmc_logistic_psb2 <- mcmc_sample(logistic_psb2, chains = 1, verbose = FALSE, seed = 123)
+  mcmc_summary <- mcmc_logistic_psb2$summary(
+    variables = c("alpha", "beta_trt", "beta[1]", "beta[2]"),
+    mean,
+    ~ quantile(.x, probs = c(0.025, 0.975))
+  )
+
+  data.frame(
+    fitter = "psborrow2",
+    borrowing = w,
+    variable = c("(Intercept)", "trt", "cov1", "cov2"),
+    estimate = mcmc_summary$mean,
+    lower = mcmc_summary$`2.5%`,
+    upper = mcmc_summary$`97.5%`
+  )
+})
+```
+
+
+```{r psb2_logistic-no-eval, eval = FALSE}
 logistic_psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   logistic_psb2 <- create_analysis_obj(
     data_matrix = as.matrix(cbind(
@@ -182,7 +273,7 @@ As before, the external control arm having weights (or power parameters)
 equal to 0, 0.25, 0.5, 0.75, 1. The internal treated and control patients have weight = 1.
 The model has a treatment indicator and two covariates, `eventtime ~ trt + cov1 + cov2`.
 
-```{r surv_data, include = FALSE}
+```{r surv_data}
 sim_data_exp <- cbind(
   simsurv::simsurv(
     dist = "exponential",
@@ -199,7 +290,7 @@ head(sim_data_exp)
 ```
 
 
-```{r glm_exp, include = FALSE}
+```{r glm_exp}
 ## glm
 glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   exp_glm <- glm(
@@ -225,6 +316,37 @@ glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
 ```
 
 ```{r bayesppd_Exp, include = FALSE}
+## BayesPPD
+ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
+  exp_ppd <- glm.fixed.a0(
+    data.type = "Exponential",
+    data.link = "Log",
+    y = sim_data_exp[sim_data_exp$ext == 0, ]$eventtime,
+    x = as.matrix(sim_data_exp[sim_data_exp$ext == 0, c("trt", "cov1", "cov2")]),
+    historical = list(list(
+      y0 = sim_data_exp[sim_data_exp$ext == 1, ]$eventtime,
+      x0 = as.matrix(sim_data_exp[sim_data_exp$ext == 1, c("cov1", "cov2")]),
+      a0 = w
+    )),
+    lower.limits = rep(-100, 5),
+    upper.limits = rep(100, 5),
+    slice.widths = rep(1, 5),
+    nMC = 10000,
+    nBI = 1000
+  )[[1]]
+  ci <- apply(exp_ppd, 2, quantile, probs = c(0.025, 0.975))
+  data.frame(
+    fitter = "BayesPPD",
+    borrowing = w,
+    variable = c("(Intercept)", "trt", "cov1", "cov2"),
+    estimate = colMeans(exp_ppd),
+    lower = ci[1, ],
+    upper = ci[2, ]
+  )
+})
+```
+
+```{r bayesppd_Exp-no-eval, eval = FALSE}
 ## BayesPPD
 ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   exp_ppd <- glm.fixed.a0(
@@ -291,6 +413,44 @@ psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
   )
 })
 ```
+
+
+```{r psborrow2_Exp-no-eval, eval = FALSE}
+## psborrow2
+psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
+  exp_psb2 <- create_analysis_obj(
+    data_matrix = as.matrix(cbind(sim_data_exp, w = ifelse(example_matrix[, "ext"] == 1, w, 1))),
+    covariates = add_covariates(c("cov1", "cov2"),
+      priors = normal_prior(0, 100)
+    ),
+    borrowing = borrowing_details("Full borrowing",
+      ext_flag_col = "ext",
+    ),
+    treatment = treatment_details("trt", normal_prior(0, 100)),
+    outcome = outcome_surv_exponential("eventtime", "censor",
+      baseline_prior = normal_prior(0, 1000),
+      weight_var = "w"
+    )
+  )
+
+  mcmc_exp_psb2 <- mcmc_sample(exp_psb2, chains = 1, verbose = FALSE, seed = 123)
+  mcmc_summary <- mcmc_exp_psb2$summary(
+    variables = c("alpha", "beta_trt", "beta[1]", "beta[2]"),
+    mean,
+    ~ quantile(.x, probs = c(0.025, 0.975))
+  )
+
+  data.frame(
+    fitter = "psborrow2",
+    borrowing = w,
+    variable = c("(Intercept)", "trt", "cov1", "cov2"),
+    estimate = mcmc_summary$mean,
+    lower = mcmc_summary$`2.5%`,
+    upper = mcmc_summary$`97.5%`
+  )
+})
+```
+
 
 ### Results
 
