--- a/vignettes/weighting.Rmd
+++ b/vignettes/weighting.Rmd
@@ -41,13 +41,107 @@ The model has a treatment indicator and two covariates, `resp ~ trt + cov1 + cov
 
 
 
+
+```r
+logistic_glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
+  logistic_glm <- glm(
+    resp ~ trt + cov1 + cov2,
+    data = as.data.frame(example_matrix),
+    family = binomial,
+    weights = ifelse(example_matrix[, "ext"] == 1, w, 1)
+  )
+  glm_summary <- summary(logistic_glm)$coef
+  ci <- confint(logistic_glm)
+  data.frame(
+    fitter = "glm",
+    borrowing = w,
+    variable = c("(Intercept)", "trt", "cov1", "cov2"),
+    estimate = glm_summary[, "Estimate"],
+    lower = ci[, 1],
+    upper = ci[, 2]
+  )
+})
+```
+
 ### BayesPPD
 
 
 
+
+
+```r
+logistic_ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
+  logistic_ppd <- glm.fixed.a0(
+    data.type = "Bernoulli",
+    data.link = "Logistic",
+    y = example_matrix[example_matrix[, "ext"] == 0, ][, "resp"],
+    x = example_matrix[example_matrix[, "ext"] == 0, ][, c("trt", "cov1", "cov2")],
+    historical = list(list(
+      y0 = example_matrix[example_matrix[, "ext"] == 1, ][, "resp"],
+      x0 = example_matrix[example_matrix[, "ext"] == 1, ][, c("cov1", "cov2")],
+      a0 = w
+    )),
+    lower.limits = rep(-100, 5),
+    upper.limits = rep(100, 5),
+    slice.widths = rep(1, 5),
+    nMC = 10000,
+    nBI = 1000
+  )[[1]]
+  ci <- apply(logistic_ppd, 2, quantile, probs = c(0.025, 0.975))
+  data.frame(
+    fitter = "BayesPPD",
+    borrowing = w,
+    variable = c("(Intercept)", "trt", "cov1", "cov2"),
+    estimate = colMeans(logistic_ppd),
+    lower = ci[1, ],
+    upper = ci[2, ]
+  )
+})
+```
+
 ### psborrow2
 
 
+
+
+
+```r
+logistic_psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
+  logistic_psb2 <- create_analysis_obj(
+    data_matrix = as.matrix(cbind(
+      example_matrix,
+      w = ifelse(example_matrix[, "ext"] == 1, w, 1)
+    )),
+    covariates = add_covariates(c("cov1", "cov2"),
+      priors = normal_prior(0, 100)
+    ),
+    borrowing = borrowing_details("Full borrowing",
+      ext_flag_col = "ext",
+    ),
+    treatment = treatment_details("trt", normal_prior(0, 100)),
+    outcome = outcome_bin_logistic("resp",
+      baseline_prior = normal_prior(0, 1000),
+      weight_var = "w"
+    )
+  )
+
+  mcmc_logistic_psb2 <- mcmc_sample(logistic_psb2, chains = 1, verbose = FALSE, seed = 123)
+  mcmc_summary <- mcmc_logistic_psb2$summary(
+    variables = c("alpha", "beta_trt", "beta[1]", "beta[2]"),
+    mean,
+    ~ quantile(.x, probs = c(0.025, 0.975))
+  )
+
+  data.frame(
+    fitter = "psborrow2",
+    borrowing = w,
+    variable = c("(Intercept)", "trt", "cov1", "cov2"),
+    estimate = mcmc_summary$mean,
+    lower = mcmc_summary$`2.5%`,
+    upper = mcmc_summary$`97.5%`
+  )
+})
+```
 
 ### Results
 
@@ -77,26 +171,26 @@ knitr::kable(wide[new_order, ], digits = 3, row.names = FALSE)
 
 | borrowing|variable    |est_ci.glm              |est_ci.BayesPPD         |est_ci.psborrow2        |
 |---------:|:-----------|:-----------------------|:-----------------------|:-----------------------|
-|      0.00|(Intercept) |0.646 (-0.038, 1.357)   |0.651 (-0.046, 1.360)   |0.666 (-0.044, 1.384)   |
-|      0.25|(Intercept) |0.394 (-0.131, 0.931)   |0.401 (-0.103, 0.938)   |0.404 (-0.129, 0.950)   |
-|      0.50|(Intercept) |0.293 (-0.158, 0.751)   |0.302 (-0.132, 0.756)   |0.301 (-0.147, 0.746)   |
-|      0.75|(Intercept) |0.235 (-0.168, 0.642)   |0.241 (-0.153, 0.650)   |0.239 (-0.165, 0.643)   |
-|      1.00|(Intercept) |0.196 (-0.172, 0.567)   |0.201 (-0.150, 0.574)   |0.200 (-0.165, 0.570)   |
-|      0.00|cov1        |-0.771 (-1.465, -0.095) |-0.782 (-1.489, -0.084) |-0.794 (-1.474, -0.111) |
-|      0.25|cov1        |-0.781 (-1.340, -0.231) |-0.797 (-1.343, -0.253) |-0.795 (-1.356, -0.246) |
-|      0.50|cov1        |-0.769 (-1.252, -0.291) |-0.782 (-1.256, -0.308) |-0.782 (-1.270, -0.310) |
-|      0.75|cov1        |-0.758 (-1.191, -0.329) |-0.766 (-1.194, -0.346) |-0.769 (-1.201, -0.328) |
-|      1.00|cov1        |-0.749 (-1.145, -0.357) |-0.760 (-1.154, -0.373) |-0.757 (-1.147, -0.366) |
-|      0.00|cov2        |-0.730 (-1.472, -0.008) |-0.753 (-1.504, -0.017) |-0.751 (-1.491, -0.021) |
-|      0.25|cov2        |-0.559 (-1.114, -0.014) |-0.568 (-1.130, -0.025) |-0.567 (-1.126, -0.024) |
-|      0.50|cov2        |-0.459 (-0.926, 0.003)  |-0.467 (-0.926, 0.002)  |-0.464 (-0.930, -0.006) |
-|      0.75|cov2        |-0.398 (-0.811, 0.011)  |-0.405 (-0.816, 0.010)  |-0.403 (-0.816, 0.011)  |
-|      1.00|cov2        |-0.358 (-0.731, 0.013)  |-0.360 (-0.734, 0.011)  |-0.359 (-0.731, 0.006)  |
-|      0.00|trt         |0.154 (-0.558, 0.871)   |0.165 (-0.558, 0.880)   |0.155 (-0.574, 0.885)   |
-|      0.25|trt         |0.349 (-0.183, 0.885)   |0.357 (-0.172, 0.894)   |0.353 (-0.197, 0.887)   |
-|      0.50|trt         |0.405 (-0.082, 0.894)   |0.408 (-0.060, 0.887)   |0.410 (-0.079, 0.889)   |
-|      0.75|trt         |0.434 (-0.031, 0.900)   |0.435 (-0.033, 0.901)   |0.440 (-0.028, 0.911)   |
-|      1.00|trt         |0.452 (-0.000, 0.905)   |0.456 (0.011, 0.914)    |0.456 (-0.000, 0.909)   |
+|      0.00|(Intercept) |0.646 (-0.038, 1.357)   |0.664 (-0.043, 1.384)   |0.666 (-0.044, 1.384)   |
+|      0.25|(Intercept) |0.394 (-0.131, 0.931)   |0.398 (-0.160, 0.932)   |0.404 (-0.129, 0.950)   |
+|      0.50|(Intercept) |0.293 (-0.158, 0.751)   |0.302 (-0.160, 0.771)   |0.301 (-0.147, 0.746)   |
+|      0.75|(Intercept) |0.235 (-0.168, 0.642)   |0.247 (-0.159, 0.651)   |0.239 (-0.165, 0.643)   |
+|      1.00|(Intercept) |0.196 (-0.172, 0.567)   |0.200 (-0.181, 0.579)   |0.200 (-0.165, 0.570)   |
+|      0.00|cov1        |-0.771 (-1.465, -0.095) |-0.799 (-1.514, -0.101) |-0.794 (-1.474, -0.111) |
+|      0.25|cov1        |-0.781 (-1.340, -0.231) |-0.790 (-1.344, -0.227) |-0.795 (-1.356, -0.246) |
+|      0.50|cov1        |-0.769 (-1.252, -0.291) |-0.786 (-1.283, -0.290) |-0.782 (-1.270, -0.310) |
+|      0.75|cov1        |-0.758 (-1.191, -0.329) |-0.769 (-1.206, -0.334) |-0.769 (-1.201, -0.328) |
+|      1.00|cov1        |-0.749 (-1.145, -0.357) |-0.753 (-1.155, -0.356) |-0.757 (-1.147, -0.366) |
+|      0.00|cov2        |-0.730 (-1.472, -0.008) |-0.757 (-1.517, -0.026) |-0.751 (-1.491, -0.021) |
+|      0.25|cov2        |-0.559 (-1.114, -0.014) |-0.571 (-1.112, -0.023) |-0.567 (-1.126, -0.024) |
+|      0.50|cov2        |-0.459 (-0.926, 0.003)  |-0.461 (-0.921, 0.003)  |-0.464 (-0.930, -0.006) |
+|      0.75|cov2        |-0.398 (-0.811, 0.011)  |-0.410 (-0.825, -0.001) |-0.403 (-0.816, 0.011)  |
+|      1.00|cov2        |-0.358 (-0.731, 0.013)  |-0.366 (-0.748, 0.009)  |-0.359 (-0.731, 0.006)  |
+|      0.00|trt         |0.154 (-0.558, 0.871)   |0.166 (-0.558, 0.877)   |0.155 (-0.574, 0.885)   |
+|      0.25|trt         |0.349 (-0.183, 0.885)   |0.356 (-0.181, 0.886)   |0.353 (-0.197, 0.887)   |
+|      0.50|trt         |0.405 (-0.082, 0.894)   |0.409 (-0.078, 0.890)   |0.410 (-0.079, 0.889)   |
+|      0.75|trt         |0.434 (-0.031, 0.900)   |0.436 (-0.037, 0.898)   |0.440 (-0.028, 0.911)   |
+|      1.00|trt         |0.452 (-0.000, 0.905)   |0.456 (0.010, 0.907)    |0.456 (-0.000, 0.909)   |
 
 
 
@@ -125,16 +219,89 @@ equal to 0, 0.25, 0.5, 0.75, 1. The internal treated and control patients have w
 The model has a treatment indicator and two covariates, `eventtime ~ trt + cov1 + cov2`.
 
 
+```r
+sim_data_exp <- cbind(
+  simsurv::simsurv(
+    dist = "exponential",
+    x = as.data.frame(example_matrix[, c("trt", "cov1", "cov2", "ext")]),
+    betas = c("trt" = 1.3, "cov1" = 1, "cov2" = 0.1, "ext" = -0.4),
+    lambdas = 5
+  ),
+  example_matrix[, c("trt", "cov1", "cov2", "ext")],
+  censor = 0
+)
+```
 
 ```r
 head(sim_data_exp)
-#   id  eventtime status trt cov1 cov2 ext censor
-# 1  1 0.10993980      1   0    0    1   0      0
-# 2  2 0.31680837      1   0    1    0   0      0
-# 3  3 0.03135190      1   0    1    0   0      0
-# 4  4 0.09291460      1   0    1    0   0      0
-# 5  5 0.29601129      1   0    0    0   0      0
-# 6  6 0.07704004      1   0    1    0   0      0
+#   id   eventtime status trt cov1 cov2 ext censor
+# 1  1 0.073305622      1   0    0    1   0      0
+# 2  2 0.082448545      1   0    1    0   0      0
+# 3  3 0.065267084      1   0    1    0   0      0
+# 4  4 0.005114499      1   0    1    0   0      0
+# 5  5 0.419958128      1   0    0    0   0      0
+# 6  6 0.009949567      1   0    1    0   0      0
+```
+
+
+
+```r
+## glm
+glm_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
+  exp_glm <- glm(
+    eventtime ~ trt + cov1 + cov2,
+    data = sim_data_exp,
+    family = Gamma(link = "log"),
+    weights = ifelse(sim_data_exp$ext == 1, w, 1)
+  )
+  glm_summary <- summary(exp_glm, dispersion = 1)
+  est <- -glm_summary$coefficients[, "Estimate"]
+  lower <- est - 1.96 * glm_summary$coefficients[, "Std. Error"]
+  upper <- est + 1.96 * glm_summary$coefficients[, "Std. Error"]
+
+  data.frame(
+    fitter = "glm",
+    borrowing = w,
+    variable = c("(Intercept)", "trt", "cov1", "cov2"),
+    estimate = est,
+    lower = lower,
+    upper = upper
+  )
+})
+```
+
+
+
+
+```r
+## BayesPPD
+ppd_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
+  exp_ppd <- glm.fixed.a0(
+    data.type = "Exponential",
+    data.link = "Log",
+    y = sim_data_exp[sim_data_exp$ext == 0, ]$eventtime,
+    x = as.matrix(sim_data_exp[sim_data_exp$ext == 0, c("trt", "cov1", "cov2")]),
+    historical = list(list(
+      y0 = sim_data_exp[sim_data_exp$ext == 1, ]$eventtime,
+      x0 = as.matrix(sim_data_exp[sim_data_exp$ext == 1, c("cov1", "cov2")]),
+      a0 = w
+    )),
+    lower.limits = rep(-100, 5),
+    upper.limits = rep(100, 5),
+    slice.widths = rep(1, 5),
+    nMC = 10000,
+    nBI = 1000
+  )[[1]]
+  ci <- apply(exp_ppd, 2, quantile, probs = c(0.025, 0.975))
+  data.frame(
+    fitter = "BayesPPD",
+    borrowing = w,
+    variable = c("(Intercept)", "trt", "cov1", "cov2"),
+    estimate = colMeans(exp_ppd),
+    lower = ci[1, ],
+    upper = ci[2, ]
+  )
+})
 ```
 
 
@@ -142,7 +309,41 @@ head(sim_data_exp)
 
 
 
+```r
+## psborrow2
+psb_reslist <- lapply(c(0, 0.25, 0.5, 0.75, 1), function(w) {
+  exp_psb2 <- create_analysis_obj(
+    data_matrix = as.matrix(cbind(sim_data_exp, w = ifelse(example_matrix[, "ext"] == 1, w, 1))),
+    covariates = add_covariates(c("cov1", "cov2"),
+      priors = normal_prior(0, 100)
+    ),
+    borrowing = borrowing_details("Full borrowing",
+      ext_flag_col = "ext",
+    ),
+    treatment = treatment_details("trt", normal_prior(0, 100)),
+    outcome = outcome_surv_exponential("eventtime", "censor",
+      baseline_prior = normal_prior(0, 1000),
+      weight_var = "w"
+    )
+  )
 
+  mcmc_exp_psb2 <- mcmc_sample(exp_psb2, chains = 1, verbose = FALSE, seed = 123)
+  mcmc_summary <- mcmc_exp_psb2$summary(
+    variables = c("alpha", "beta_trt", "beta[1]", "beta[2]"),
+    mean,
+    ~ quantile(.x, probs = c(0.025, 0.975))
+  )
+
+  data.frame(
+    fitter = "psborrow2",
+    borrowing = w,
+    variable = c("(Intercept)", "trt", "cov1", "cov2"),
+    estimate = mcmc_summary$mean,
+    lower = mcmc_summary$`2.5%`,
+    upper = mcmc_summary$`97.5%`
+  )
+})
+```
 
 
 ### Results
@@ -170,28 +371,28 @@ knitr::kable(wide[new_order, ], digits = 3, row.names = FALSE)
 
 
 
-| borrowing|variable    |est_ci.glm             |est_ci.BayesPPD        |est_ci.psborrow2       |
-|---------:|:-----------|:----------------------|:----------------------|:----------------------|
-|      0.00|(Intercept) |1.548 (1.215, 1.881)   |1.528 (1.168, 1.863)   |1.532 (1.179, 1.861)   |
-|      0.25|(Intercept) |1.249 (0.991, 1.506)   |1.242 (0.972, 1.504)   |1.241 (0.975, 1.492)   |
-|      0.50|(Intercept) |1.188 (0.966, 1.410)   |1.177 (0.948, 1.400)   |1.182 (0.947, 1.404)   |
-|      0.75|(Intercept) |1.160 (0.961, 1.359)   |1.155 (0.952, 1.354)   |1.154 (0.950, 1.354)   |
-|      1.00|(Intercept) |1.144 (0.962, 1.325)   |1.138 (0.958, 1.313)   |1.140 (0.949, 1.324)   |
-|      0.00|cov1        |1.250 (0.920, 1.579)   |1.256 (0.922, 1.579)   |1.251 (0.922, 1.583)   |
-|      0.25|cov1        |1.167 (0.898, 1.437)   |1.164 (0.892, 1.442)   |1.168 (0.901, 1.442)   |
-|      0.50|cov1        |1.153 (0.919, 1.387)   |1.159 (0.924, 1.396)   |1.155 (0.919, 1.395)   |
-|      0.75|cov1        |1.147 (0.936, 1.357)   |1.148 (0.935, 1.358)   |1.149 (0.938, 1.359)   |
-|      1.00|cov1        |1.143 (0.951, 1.336)   |1.146 (0.950, 1.339)   |1.143 (0.948, 1.341)   |
-|      0.00|cov2        |0.070 (-0.282, 0.422)  |0.065 (-0.301, 0.419)  |0.064 (-0.296, 0.419)  |
-|      0.25|cov2        |-0.025 (-0.289, 0.238) |-0.025 (-0.296, 0.241) |-0.026 (-0.299, 0.244) |
-|      0.50|cov2        |-0.012 (-0.235, 0.211) |-0.012 (-0.239, 0.216) |-0.012 (-0.234, 0.210) |
-|      0.75|cov2        |-0.001 (-0.197, 0.195) |-0.001 (-0.202, 0.202) |-0.001 (-0.198, 0.199) |
-|      1.00|cov2        |0.007 (-0.171, 0.185)  |0.008 (-0.170, 0.189)  |0.006 (-0.169, 0.188)  |
-|      0.00|trt         |1.319 (0.974, 1.665)   |1.325 (0.984, 1.681)   |1.324 (0.977, 1.677)   |
-|      0.25|trt         |1.704 (1.446, 1.962)   |1.704 (1.448, 1.964)   |1.702 (1.443, 1.961)   |
-|      0.50|trt         |1.768 (1.532, 2.005)   |1.768 (1.529, 2.001)   |1.766 (1.528, 2.004)   |
-|      0.75|trt         |1.796 (1.570, 2.022)   |1.792 (1.557, 2.014)   |1.792 (1.563, 2.015)   |
-|      1.00|trt         |1.811 (1.591, 2.032)   |1.809 (1.586, 2.024)   |1.810 (1.584, 2.022)   |
+| borrowing|variable    |est_ci.glm            |est_ci.BayesPPD       |est_ci.psborrow2      |
+|---------:|:-----------|:---------------------|:---------------------|:---------------------|
+|      0.00|(Intercept) |1.514 (1.181, 1.847)  |1.497 (1.158, 1.829)  |1.496 (1.142, 1.825)  |
+|      0.25|(Intercept) |1.358 (1.101, 1.616)  |1.350 (1.082, 1.615)  |1.346 (1.073, 1.606)  |
+|      0.50|(Intercept) |1.338 (1.115, 1.560)  |1.328 (1.095, 1.556)  |1.331 (1.101, 1.553)  |
+|      0.75|(Intercept) |1.331 (1.132, 1.530)  |1.325 (1.125, 1.521)  |1.328 (1.115, 1.526)  |
+|      1.00|(Intercept) |1.328 (1.147, 1.510)  |1.323 (1.137, 1.505)  |1.322 (1.133, 1.508)  |
+|      0.00|cov1        |1.228 (0.899, 1.558)  |1.227 (0.898, 1.548)  |1.231 (0.916, 1.559)  |
+|      0.25|cov1        |1.096 (0.827, 1.365)  |1.101 (0.832, 1.371)  |1.100 (0.834, 1.375)  |
+|      0.50|cov1        |1.055 (0.821, 1.289)  |1.062 (0.828, 1.304)  |1.057 (0.821, 1.292)  |
+|      0.75|cov1        |1.033 (0.823, 1.243)  |1.034 (0.827, 1.241)  |1.033 (0.828, 1.248)  |
+|      1.00|cov1        |1.018 (0.826, 1.211)  |1.022 (0.834, 1.217)  |1.023 (0.828, 1.220)  |
+|      0.00|cov2        |0.088 (-0.264, 0.440) |0.084 (-0.267, 0.424) |0.080 (-0.277, 0.432) |
+|      0.25|cov2        |0.025 (-0.239, 0.289) |0.021 (-0.244, 0.288) |0.025 (-0.241, 0.281) |
+|      0.50|cov2        |0.034 (-0.188, 0.257) |0.031 (-0.192, 0.250) |0.034 (-0.189, 0.262) |
+|      0.75|cov2        |0.042 (-0.154, 0.239) |0.044 (-0.147, 0.241) |0.042 (-0.153, 0.232) |
+|      1.00|cov2        |0.048 (-0.130, 0.226) |0.047 (-0.129, 0.223) |0.048 (-0.134, 0.226) |
+|      0.00|trt         |1.258 (0.912, 1.603)  |1.266 (0.931, 1.616)  |1.265 (0.923, 1.623)  |
+|      0.25|trt         |1.517 (1.259, 1.775)  |1.516 (1.254, 1.773)  |1.519 (1.257, 1.783)  |
+|      0.50|trt         |1.558 (1.322, 1.794)  |1.559 (1.317, 1.794)  |1.556 (1.321, 1.793)  |
+|      0.75|trt         |1.575 (1.348, 1.801)  |1.572 (1.342, 1.798)  |1.571 (1.333, 1.797)  |
+|      1.00|trt         |1.584 (1.363, 1.804)  |1.581 (1.356, 1.798)  |1.583 (1.352, 1.801)  |
 
 
 
