--- a/vignettes/original/_dataset.Rmd
+++ b/vignettes/original/_dataset.Rmd
@@ -13,7 +13,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-```{r knitr, include = FALSE}
+```{r knitr, echo = FALSE, message = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   fig.align = "center",
@@ -242,7 +242,7 @@ treatment
 Now that we have thought through each of the inputs to `create_analysis_obj()`,
 let's create an analysis object:
 
-```{r anls-obj-no-echo, include = FALSE}
+```{r anls-obj-no-echo, echo = FALSE, message = FALSE}
 anls_obj <- create_analysis_obj(
   data_matrix = example_matrix,
   outcome = outcome,
@@ -275,7 +275,7 @@ that are passed to
 [`CmdStanModel` objects](https://mc-stan.org/cmdstanr/reference/model-method-sample.html).
 Note that running this may take a few minutes.
 
-```{r res-no-echo, include = FALSE}
+```{r res-no-echo, echo = FALSE, message = FALSE}
 results <- mcmc_sample(anls_obj,
   iter_warmup = 2000,
   iter_sampling = 50000,
