--- a/vignettes/original/_dataset.Rmd
+++ b/vignettes/original/_dataset.Rmd
@@ -13,7 +13,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-```{r knitr, echo = FALSE, message = FALSE}
+```{r knitr, echo = FALSE, message = FALSE, warning = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   fig.align = "center",
@@ -242,14 +242,16 @@ treatment
 Now that we have thought through each of the inputs to `create_analysis_obj()`,
 let's create an analysis object:
 
-```{r anls-obj-no-echo, echo = FALSE, message = FALSE}
-anls_obj <- create_analysis_obj(
-  data_matrix = example_matrix,
-  outcome = outcome,
-  borrowing = borrowing,
-  treatment = treatment,
-  quiet = TRUE
-)
+```{r anls-obj-no-echo, results = 'asis', echo = FALSE}
+suppressMessages({
+  anls_obj <- create_analysis_obj(
+    data_matrix = example_matrix,
+    outcome = outcome,
+    borrowing = borrowing,
+    treatment = treatment,
+    quiet = TRUE
+    )
+})
 ```
 
 ```{r anls-obj-no-eval, eval = FALSE}
@@ -275,22 +277,24 @@ that are passed to
 [`CmdStanModel` objects](https://mc-stan.org/cmdstanr/reference/model-method-sample.html).
 Note that running this may take a few minutes.
 
-```{r res-no-echo, echo = FALSE, message = FALSE}
-results <- mcmc_sample(anls_obj,
-  iter_warmup = 2000,
-  iter_sampling = 50000,
-  chains = 4,
-  seed = 112233
-)
+```{r echo = FALSE}
+output_hook <- knitr::knit_hooks$get("output")
+knitr::knit_hooks$set(output = function(x, options) {
+  return(NULL)
+})
 ```
 
-```{r res-no-eval, eval = FALSE}
+```{r}
 results <- mcmc_sample(anls_obj,
   iter_warmup = 2000,
   iter_sampling = 50000,
   chains = 4,
   seed = 112233
-)
+  )
+```
+
+```{r echo = FALSE}
+knitr::knit_hooks$set(output = output_hook)
 ```
 
 # Summarizing results{.tabset}
